# sillycat-rust-web

./: .gitignore  LICENSE  README.md
axum_web_starter/: .env.template  Cargo.toml  Dockerfile  Makefile  README.md
axum_web_starter/src/: api_doc.rs  main.rs  state.rs
axum_web_starter/src/daos/: customer_dao.rs  mod.rs  seller_dao.rs
axum_web_starter/src/handlers/: customer_handler.rs  mod.rs  seller_handler.rs
axum_web_starter/src/models/: customer.rs  mod.rs  seller.rs
axum_web_starter/src/routes/: customer_route.rs  mod.rs  seller_route.rs
axum_web_starter/tests/: customer_tests.rs  seller_tests.rs
axum_web_starter/tests/http/: mod.rs
