[package]
name = "axum_web_starter"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
uuid = { version = "1.12.0", features = ["v4", "serde"] }
tower = "0.5.2"
reqwest = { version = "0.12.12", features = ["json"] }
dotenv = "0.15.0"
utoipa = "5.3.1"
axum-swagger-ui = "0.3.0"
moka = { version = "0.12.0", features = ["future"] }
opendal = { version = "0.51.2", features = ["services-moka", "services-redis"] }
anyhow = "1.0.96"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }